
vx.xx status, mm/dd/yyyy

v0.13 alpha, 03/06/2011
	New:
		- Created an installer for osx
		- Removed the dependency of an xml init.file, added function, the normal enable... functions
		  still work, they just use the default values:
			init(PApplet parent)
			enableDepth(int width,int height,int fps)
			enableRGB(int width,int height,int fps)
			enableIR(int width,int height,int fps)
			enableScene(int width,int height,int fps)
		- Added record + save ability
			enableRecorder(int recordMedium,String filePath)
			addNodeToRecording(int nodeType,int compression)
			removeNodeFromRecording(int nodeType)
			openFileRecording(String filePath)
		- Added new Examples:
			SimpleOpenNI_RecorderPlay
		
	Changes:
		- All older exmaples where changed, now they are not using xml files anymore
		
v0.12 alpha, 02/28/2011
	New:
		- Added handtracking
		  3 new callbacks: 
			onCreateHands(long nId, PVector pPosition, float fTime)
			onUpdateHands(long nId, PVector pPosition, float fTime)
			onDestroyHands(long nId, float fTime)
		- Added gesturetracking
		  2 new callbacks: 
			onRecognizeGesture(String strGesture, PVector idPosition, PVector endPosition)
			onProgressGesture(String strGesture, PVector position,float progress)
		- Export now the realworld depthMap, see the function depthMapRealWorld
		- Added functions to get the horizontal and the vertical field of view of the camera
		  hFieldOfView
		  vFieldOfView
		- Added new Examples: 
			SimpleOpenNI_DepthMap3d
			SimpleOpenNI_Hands3d
		- Added camera frustum drawing function 'drawCamFrustum'
		
	Changes:
		- Changed the names of the listed callbacks, just to have all over the same naming method
		  onUserNew 			-> onNewUser
		  onUserLost 			-> onLostUser
		  onCalibrationStarted 	-> onStartCalibration
		  onCalibrationEnded	-> onEndCalibration
		  onPoseStarted	 		-> onStartPose
		  onPoseEnded 			-> onEndPose
		- Updated several examples

		
v0.11 alpha, 02/22/2011
	- started the changeLog
v0.10 alpha
	-